fix for overflow behavior showing scroll bars when setting height to 100%

--- a/cartconvserv/static/css/styles.css
+++ b/cartconvserv/static/css/styles.css
@@ -1,19 +1,27 @@
-
 html, body {
   height:100%;
+  overflow:hidden;
+  margin:0px;
+  padding:0px;
+}
+
+html body div {
+  height:100%;
+  margin-left:4px;
+  overflow: auto;
 }
 
 
 nav ul {
-  padding-left: 0;
+  padding-left:0px;
 }
 
 nav ul li {
   list-style-type:none;
   
-  float: left;
-  display: inline;
-  clear: left;
+  float:left;
+  display:inline;
+  clear:left;
   
   background:#f3f3f3;
   border:1px solid #cccccc;
@@ -21,7 +29,7 @@ nav ul li {
   -webkit-border-radius:10px;
   border-radius:10px;
   
-  margin-bottom: 4px;
+  margin-bottom:4px;
 }
 
 nav ul li a {
@@ -30,14 +38,14 @@ nav ul li a {
 
 footer {
   background-color: LightGrey;
-  padding: 4px;
-  clear: both;
+  padding:4px;
+  clear:both;
 }
 
 iframe.documentation {
-  padding:0;
-  margin:0;
-  border:0;
+  padding:0px;
+  margin:0px;
+  border:0px;
   width:100%;
   height:80%;
   /*seamless:"seamless"; */
